# docs/openapi.yaml
@@ -89,8 +89,8 @@ paths:
               schema:
                 $ref: "#/components/schemas/Author"
 
-        "400":
-          description: Datos inválidos.
+        "409":
+          description: El email ya está registrado.
 
         "500":
           description: Error interno del servidor.
